--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Welcome to Ting Huang's homepage
+description: PhD paper requirement of Northeastern University Khoury College of Computer Sciences
